[package]
name = "awakeningbw"
version = "0.1.0"
authors = ["jguhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
#bevy = { path = "../bevy", features = ["dynamic"] }
# bevy_tilemap = { path = "../bevy_tilemap" }
bevy = {version="0.4.0", default-features=false }
bevy_webgl2 = {version="0.4.2", optional=true}
winit = {version = "0.24.0"}
rand = "0.8.1"
rand_xoshiro = "0.6.0"
rand_chacha = "0.3.0"
rand_distr = "0.4.0"
strum = "0.20.0"
strum_macros = "0.20"
#typenum = "1.12.0"
#num = "0.3.1"
#num-traits = "0.2"
#num-derive = "0.3"
#generic-array = "0.14.4"
#numeric-array = "0.5.2"
#ndarray = "0.14.0"
bevy_rapier2d = { path = "../bevy_rapier/bevy_rapier2d", features = ["wasm-bindgen"] }
yaml-rust = "0.4.4"
once_cell = "1.5.2"
hashbrown = {version = "0.9", features = ["ahash", "inline-more"]}
# bevy_svg_map = "0.1.1"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon/"} # "0.1.5"
bevy_easings = "0.3.0"
bevy-contrib-inspector = "0.5.1"
bevy_ninepatch = "0.4.0"
svg_face = "0.1.3"

[profile.dev]
opt-level = 1